[project]
name = "pmdro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Stephen Brown", email = "46618639+sbrown3212@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
]

[project.scripts]
# pmdro = "pmdro:main"
pmdro = "pmdro.main:cli"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"
